[package]
name = "circom-mpc-compiler"
version = "0.9.1"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0"           #required because of the circom compiler dependencies
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ec.workspace = true
ark-ff.workspace = true
circom-types = { version = "0.9.0", path = "../circom-types" }
circom-mpc-vm = { version = "0.8.0", path = "../circom-mpc-vm" }
clap.workspace = true
eyre.workspace = true
itertools.workspace = true
serde.workspace = true
sha2.workspace = true
tracing.workspace = true

# external circom dependencies
circom-compiler = { version = "2.2.2", git = "https://github.com/TaceoLabs/circom", package = "compiler", rev = "53c1ccd0c74f12665c5aeb89592360f42c3d1226" }
circom-constraint_generation = { version = "2.2.2", git = "https://github.com/TaceoLabs/circom", package = "constraint_generation", rev = "53c1ccd0c74f12665c5aeb89592360f42c3d1226" }
circom-parser = { version = "2.2.2", git = "https://github.com/TaceoLabs/circom", package = "parser", rev = "53c1ccd0c74f12665c5aeb89592360f42c3d1226" }
circom-program_structure = { version = "2.2.2", git = "https://github.com/TaceoLabs/circom", package = "program_structure", rev = "53c1ccd0c74f12665c5aeb89592360f42c3d1226" }
circom-type_analysis = { version = "2.2.2", git = "https://github.com/TaceoLabs/circom", package = "type_analysis", rev = "53c1ccd0c74f12665c5aeb89592360f42c3d1226" }

[dev-dependencies]
ark-bn254.workspace = true
co-groth16 = { version = "0.9.0", path = "../co-groth16" }
mpc-core = { version = "0.9.0", path = "../../mpc-core" }
tracing.workspace = true
