[package]
name = "circom-mpc-vm"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
ark-ff.workspace = true
ark-serialize.workspace = true
bincode.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
co-circom-snarks = { version = "0.2.0", path = "../co-circom-snarks" }
eyre.workspace = true
flamegraph = { version = "0.1.0", path = "../../flamegraph" }
itertools.workspace = true
mpc-core = { version = "0.6.0", path = "../../mpc-core" }
mpc-net = { version = "0.2.0", path = "../../mpc-net" }
serde.workspace = true
tracing.workspace = true


