[package]
name = "circom-types"
version = "0.9.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["ark-bls12-381"]
bin = ["dep:tracing-subscriber", "dep:clap", "dep:eyre"]

[[bin]]
name = "convert-zkey-to-ark"
path = "src/bin/convert-zkey-to-ark.rs"
required-features = ["bin"]

[dependencies]
ark-bls12-377 = { workspace = true, optional = true }
ark-bls12-381 = { workspace = true, optional = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-groth16 = { workspace = true }
ark-std = { workspace = true }
byteorder = { workspace = true }
clap = { workspace = true, features = ["env"], optional = true }
eyre = { workspace = true, optional = true }
num-traits = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"], optional = true }

[dev-dependencies]
num-bigint = { workspace = true }
