[package]
name = "co-circom-types"
version = "0.6.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
circom-types = { version = "0.10.0", path = "../circom-types" }
eyre = { workspace = true }
mpc-core = { version = "0.10.0", path = "../../mpc-core" }
num-traits = { workspace = true }
num-bigint = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
