[package]
name = "co-circom"
version = "0.10.0"

publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license = "GPL-3.0"           # due to transitive dependency on circom-mpc-compiler
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bls12-381.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
bincode.workspace = true
circom-mpc-compiler = { version = "0.10.0", path = "../circom-mpc-compiler" }
circom-mpc-vm = { version = "0.9.0", path = "../circom-mpc-vm" }
circom-types = {workspace = true, features = ["full"] }
clap.workspace = true
co-circom-types = { version = "0.6.0", path = "../co-circom-types" }
co-groth16 = { version = "0.10.0", path = "../co-groth16", features = [
    "verifier",
] }
co-plonk = { version = "0.7.0", path = "../co-plonk" }
color-eyre.workspace = true
figment.workspace = true
mpc-core = { version = "0.10.0", path = "../../mpc-core" }
mpc-net = { version = "0.5.0", path = "../../mpc-net" }
num-traits.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
toml.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
rustls.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "zkey_parse"
harness = false
