[package]
name = "co-groth16"
version = "0.8.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
verifier = []

[dependencies]
ark-bls12-381 = { workspace = true }
ark-bls12-377 = { workspace = true }
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-poly = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
co-circom-snarks = { version = "0.4.0", path = "../co-circom-snarks" }
eyre = { workspace = true }
mpc-core = { version = "0.8.0", path = "../../mpc-core" }
mpc-net = { version = "0.3.0", path = "../../mpc-net" }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
circom-types = { version = "0.8.0", path = "../circom-types" }
