[package]
name = "co-plonk"
version = "0.3.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
circom-types = { workspace = true }
co-circom-snarks = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
mpc-core = { workspace = true }
mpc-net = { workspace = true }
num-traits = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
