[package]
name = "co-plonk"
version = "0.7.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-poly = { workspace = true }
ark-serialize = { workspace = true }
circom-types = { version = "0.10.0", path = "../circom-types" }
co-circom-types = { version = "0.6.0", path = "../co-circom-types" }
eyre = { workspace = true }
itertools = { workspace = true }
mpc-net = { version = "0.5.0", path = "../../mpc-net" }
mpc-core = { version = "0.10.0", path = "../../mpc-core" }
num-traits = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
sha3 = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }
ark-bn254 = { workspace = true }

[dev-dependencies]
ark-bls12-381 = { workspace = true }
ark-bn254 = { workspace = true }
num-traits = { workspace = true }
serde_json = { workspace = true }
