[package]
name = "client-ivc"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
goblin = { version = "0.1.0", path = "../goblin" }
mpc-core = { version = "0.9.0", path = "../../mpc-core" }
co-builder = { version = "0.4.0", path = "../co-builder" }
ultrahonk = { version = "0.5.0", path = "../ultrahonk" , features = ["protogalaxy"] }
common = { version = "0.1.0", path = "../common" }
protogalaxy = { version = "0.1.0", path = "../protogalaxy" }
itertools.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
flate2 = "1.0"