[package]
name = "co-acvm"
version = "0.6.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acir.workspace = true
acvm.workspace = true
ark-bn254.workspace = true
ark-ff.workspace = true
co-brillig= { version = "0.3.0", path = "../co-brillig" }
eyre.workspace = true
intmap.workspace = true
itertools.workspace = true
mpc-core = { version = "0.9.0", path = "../../mpc-core" }
noirc-abi.workspace = true
noirc-artifacts.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true
num-bigint.workspace = true
rayon.workspace = true

[dev-dependencies]
paste.workspace = true
