[package]
name = "co-acvm"
version = "0.8.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acir.workspace = true
sha2.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-grumpkin.workspace = true
blake2.workspace = true
blake3.workspace = true
co-brillig = { version = "0.4.1", path = "../co-brillig" }
co-noir-types = { version = "0.1.2", path = "../co-noir-types" }
noir-types = { version = "0.1.2", path = "../noir-types" }
co-noir-common = { version = "0.3.0", path = "../co-noir-common" }
eyre.workspace = true
intmap.workspace = true
itertools.workspace = true
mpc-core = { version = "0.11.0", path = "../../mpc-core" }
mpc-net = { version = "0.5.0", path = "../../mpc-net" }
noirc-abi.workspace = true
noirc-artifacts.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
libaes.workspace = true
num-bigint.workspace = true
rayon.workspace = true

[dev-dependencies]
paste.workspace = true
