[package]
name = "co-brillig"
version = "0.3.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acir.workspace = true
acvm.workspace = true
ark-ff.workspace = true
brillig.workspace = true
eyre.workspace = true
itertools.workspace = true
mpc-core = { version = "0.9.0", path = "../../mpc-core" }
mpc-net = { version = "0.4.0", path = "../../mpc-net" }
num-bigint.workspace = true
num-traits.workspace = true
rand.workspace = true
tracing.workspace = true

[dev-dependencies]
paste.workspace = true
