[package]
name = "co-builder"
version = "0.6.0"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
acir.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-grumpkin.workspace = true
ark-poly.workspace = true
blake3.workspace = true
co-acvm = { version = "0.8.0", path = "../co-acvm" }
noir-types = { version = "0.1.2", path = "../noir-types" }
mpc-core = { version = "0.11.0", path = "../../mpc-core" }
co-noir-common = { version = "0.3.0", path = "../co-noir-common" }
co-ultrahonk = { version = "0.7.0", path = "../co-ultrahonk" }
eyre.workspace = true
itertools.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
mpc-net = { version = "0.5.0", path = "../../mpc-net", features = ["local"] }
serde_json.workspace = true
