[package]
name = "co-goblin"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
co-acvm = { version = "0.6.0", path = "../co-acvm" }
co-builder = { version = "0.4.0", path = "../co-builder" }
mpc-core = { version = "0.9.0", path = "../../mpc-core" }
ultrahonk = { version = "0.5.0", path = "../ultrahonk" }
goblin = { version = "0.1.0", path = "../goblin" }
mpc-net = { version = "0.4.0", path = "../../mpc-net" }
common = { version = "0.1.0", path = "../common" }
ark-ec.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
tracing.workspace = true
eyre.workspace = true
itertools.workspace = true
num-bigint.workspace = true
rand.workspace = true
ark-grumpkin.workspace = true
ark-std.workspace = true
co-ultrahonk = { version = "0.5.0", path = "../co-ultrahonk" }

[dev-dependencies]
mpc-net = { version = "0.4.0", path = "../../mpc-net", features = ["local"] }
