[package]
name = "co-noir-common"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true
readme.workspace = true

[dependencies]
mpc-core = { version = "0.10.0", path = "../../mpc-core" }
mpc-net = { version = "0.5.0", path = "../../mpc-net" }
noir-types = { version = "0.1.1", path = "../noir-types" }
rayon.workspace = true
ark-serialize.workspace = true
ark-poly.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-bn254.workspace = true
eyre.workspace = true
tracing.workspace = true
num-bigint.workspace = true
sha3.workspace = true
itertools.workspace = true
num-traits.workspace = true
rand.workspace = true
ark-grumpkin.workspace = true
ruint = { workspace = true }
thiserror.workspace = true
serde.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
mpc-net = { version = "0.5.0", path = "../../mpc-net", features = ["local"] }
