[package]
name = "co-noir-types"
version = "0.1.2"
publish.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { workspace = true }
eyre.workspace = true
mpc-core = { version = "0.11.0", path = "../../mpc-core" }
rand = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
